# trackhd

./: .gitignore  BoardSegment-out.mp4.REMOVED.git-id  CMakeCache.txt  CMakeLists.txt  CodeTimer.cpp  CodeTimer.h  ECL2 LICENSE.txt  FileReader.cpp  FileReader.h  Makefile  MetaFrame.cpp  MetaFrame.h  PanningTest40s.mp4.REMOVED.git-id  PersistentData.cpp  PersistentData.h  PointPlotter.cpp  PointPlotter.h  README.md  Track4K.REMOVED.git-id  Track4K.cbp  cmake_install.cmake  install.sh  install_track4k.sh  mainDriver.cpp  out.mp4.REMOVED.git-id  presenter-crop.txt
Board Segmentation/headers/: BoardDetection.h  BoardSegmentationTesting.h  HelperMethods.h  IlluminationCorrection.h  MotionDetection.h  Track4KPreProcess.h
Board Segmentation/source/: BoardDetection.cpp  BoardSegmentationTesting.cpp  HelperMethods.cpp  IlluminationCorrection.cpp  MotionDetection.cpp  Track4KPreProcess.cpp
Panning/: FrameCropper.h  PanLogic.cpp  PresenterMotion.cpp  PresenterMotion.h  VirtualCinematographer.cpp  VirtualCinematographer.h
Panning/headers/: FrameCropper.h  PanLogic.h  PresenterMotion.h  VideoOutput.h
Panning/source/: FrameCropper.cpp  PanLogic.cpp  PresenterMotion.cpp  VideoOutput.cpp  VirtualCinematographer.cpp
Tracking/: Ghost.cpp  Ghost.h  MovementDetection.cpp  MovementDetection.h
Tracking/headers/: Ghost.h  ImageRecognition.h  MovementDetection.h  RecognitionDriver.h
Tracking/source/: Ghost.cpp  ImageRecognition.cpp  MovementDetection.cpp  RecognitionDriver.cpp
cmake/: FindOpenCV.cmake
cropvid/: build.sh  cropvid.c
examples/galicaster/: conf.ini
examples/opencast/: ingest-track4k.xml  org.opencastproject.execute.impl.ExecuteServiceImpl.cfg  track4k.json  track4k.pl
panning/: FrameCropper.cpp  FrameCropper.h  PanLogic.cpp  PanLogic.h  PresenterMotion.cpp  PresenterMotion.h  VideoOutput.cpp  VideoOutput.h  VirtualCinematographer.cpp  VirtualCinematographer.h
panning/headers/: FrameCropper.h  PanLogic.h  PresenterMotion.h  VideoOutput.h  VirtualCinematographer.h
panning/source/: FrameCropper.cpp  PanLogic.cpp  PresenterMotion.cpp  VideoOutput.cpp  VirtualCinematographer.cpp
segmentation/: BoardDetection.cpp  BoardDetection.h  HelperMethods.cpp  HelperMethods.h  IlluminationCorrection.cpp  IlluminationCorrection.h  MotionDetection.cpp  MotionDetection.h  Track4KPreProcess.cpp  Track4KPreProcess.h
source/: CMakeLists.txt  FileReader.cpp  FileReader.h  MetaFrame.cpp  MetaFrame.h  PersistentData.cpp  PersistentData.h  mainDriver.cpp
source/panning/: PanLogic.cpp  PanLogic.h  VirtualCinematographer.cpp  VirtualCinematographer.h
source/segmentation/: BoardDetection.cpp  BoardDetection.h  IlluminationCorrection.cpp  IlluminationCorrection.h  MotionDetection.h  Track4KPreProcess.cpp  Track4KPreProcess.h
source/tracking/: Ghost.cpp  ImageRecognition.cpp  ImageRecognition.h  MovementDetection.cpp  MovementDetection.h  RecognitionDriver.cpp
tracking/: Ghost.cpp  Ghost.h  ImageRecognition.cpp  ImageRecognition.h  MovementDetection.cpp  MovementDetection.h  RecognitionDriver.cpp  RecognitionDriver.h
tracking/headers/: Ghost.h  ImageRecognition.h  MovementDetection.h  RecognitionDriver.h
tracking/source/: Ghost.cpp  ImageRecognition.cpp  MovementDetection.cpp  RecognitionDriver.cpp
utils/: TrackHD_Ansible_Playbook.yml  readme.md  shellhandler.py  ssh_interactiveShell.py  ssh_track4k.py  ssh_track4k_v2.py
utils/Ansible_Playbook/: hosts  readme.md  trackhd_clnt.yml  trackhd_srv.yml
utils/Ansible_Playbook/group_vars/: trackhd_clients  trackhd_server
utils/Ansible_Playbook/roles/track4k_client/files/opencast/: org.opencastproject.execute.impl.ExecuteServiceImpl.cfg
utils/Ansible_Playbook/roles/track4k_client/tasks/: main.yml
utils/Ansible_Playbook/roles/track4k_client/templates/: trackhd_client.py.j2
utils/Ansible_Playbook/roles/track4k_server/tasks/: main.yml
utils/Ansible_Playbook/roles/track4k_server/templates/: trackhd.service.j2  trackhd_server.py.j2
utils/Pyro/: trackhd_server.py
utils/Track4KPyro/: trackhd.service  trackhd_client.py  trackhd_server.py
utils/deprecated/: readme.md  ssh_track4k_v2.py
utils/opencast_workflows/: fast-4k.xml  track4k.xml
